added favicon.ico to remove one of those errors modified ErrorResponse.java to be more readable